--- a/src/app/pages/commande/heat-the-payment-card/heat-the-payment-card.component.html
+++ b/src/app/pages/commande/heat-the-payment-card/heat-the-payment-card.component.html
@@ -1,17 +1,29 @@
-<nb-card>
-    <nb-card-body>
-        <div class="form row row-cols-1 ">
-            <div class="col d-flex justify-content-center">
-                <h1>{{'commande.confirmCommande.creditCardData' | translate }}</h1>
-            </div>
-            <div class="col d-flex justify-content-center" id="myPaymentForm">
-                
-            </div>
-            <div>
-                {{message}}
-            </div>
-        </div>
-    </nb-card-body>
+<nb-card class="my-5">
+  <nb-card-body>
+    <div class="form row row-cols-1">
+      <div class="col d-flex justify-content-center">
+        <h1>{{'commande.confirmCommande.creditCardData' | translate }}</h1>
+      </div>
+      <div class="col d-flex justify-content-center" id="myPaymentForm">
+
+      </div>
+      <div>
+        {{message}}
+      </div>
+    </div>
+  </nb-card-body>
+<!--  <div class="form row row-cols-1">-->
+<!--    <div class="container text-center">-->
+<!--      <h1>Merci ! Votre commande a bien été enregistrée.</h1>-->
+<!--      <p>Vous recevrez un récapitulatif de votre commande par email.</p>-->
+
+<!--      <ul class="list-unstyled">-->
+<!--        <li><a href="#">Menu</a></li>-->
+<!--        <li><a href="#">Vos commandes</a></li>-->
+<!--        <li><a href="#">Nous contacter</a></li>-->
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </div>-->
 </nb-card>
 
 
