Ajout du BackOffice

--- a/src/app/pages/Shared/detail-command/detail-command.component.html
+++ b/src/app/pages/Shared/detail-command/detail-command.component.html
@@ -3,7 +3,7 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>{{'product.name' | translate}}</th>
+                <th>{{'product.libelle' | translate}}</th>
                 <th>{{'comment.title' | translate}}</th>
                 <th>{{'product.quantity' | translate}}</th>
                 <th>{{'commande.s-total' | translate}}</th>
