fix tabset design

--- a/src/app/pages/commande/cart/cart.component.html
+++ b/src/app/pages/commande/cart/cart.component.html
@@ -44,9 +44,7 @@
                                     <div class="row no-gutters">
 
                                         <button class="mx-auto" nbButton shape="semi-round" status="warning" size="medium" hero type="button"
-                                            (click)="completeCommande()">{{'button.completeCommande'
-                                            |
-                                            translate}}  </button>
+                                            (click)="completeCommande()">{{'button.completeCommande' | translate}}  </button>
                                     </div>
                                 </nb-card-body>
                             </nb-card>
