fix products image

--- a/src/app/pages/menu/product-list/product-list.component.html
+++ b/src/app/pages/menu/product-list/product-list.component.html
@@ -5,7 +5,7 @@
         <div class="box">
           <div>
             <div class="img-box">
-              <img src="./assets/images/f1.png" alt="">
+              <img src="./assets/images/products/{{product.libelle}}.png" alt="">
             </div>
             <div class="detail-box">
               <h5>
