--- a/src/themes.scss
+++ b/src/themes.scss
@@ -51,3 +51,12 @@ nb-tabset .tab-link.active {
 nb-tabset .tabset{
   justify-content: center;
 }
+
+nb-layout-column {
+  padding: 0 !important;
+}
+
+nb-card {
+  margin: 0 !important;
+  min-height: 100vh;
+}
