--- a/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
@@ -1,7 +1,6 @@
 <div class="row no-gutters mb-sm-4 mb-4">
     <div class="col-sm-4 col-md-4 col-lg-4 img-box mx-auto mx-sm-auto  mx-md-0">
-        <img style=" border-radius: 5px;"
-            src="https://static.750g.com/images/600-600/fa94d52dd749d587b7fd75e4a918174b/pizza.png" alt="">
+      <img src="./assets/images/products/{{currentCommandeProduct?.product?.libelle}}.png" alt="">
     </div>
     <div class="col-sm-12 col-md-8 col-lg-8 desc-box">
         <div>
@@ -28,7 +27,7 @@
                      border: none;">{{'button.update'
                         | translate}}</button>
                 </div>
-                
+
         </div>
     </div>
 </div>
