--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nb-layout class="custom-layout">
   <nb-layout-column class="custom-layout-column">
-    <nb-card class="custom-nb-card">
+    <nb-card class="custom-nb-card" id="#menu-nb-card">
       <nb-card-body class="custom-nb-card-body">
         <div class="container">
           <div class="heading_container heading_center mb-5">
