--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -18,11 +18,11 @@
             <a class="nav-link" routerLink="/home" routerLinkActive="active">{{ "header.home" | translate }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="menu" routerLinkActive="active">{{ "header.menu" | translate }}</a>
+            <a class="nav-link" routerLink="/menu" routerLinkActive="active">{{ "header.menu" | translate }}</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/deals" routerLinkActive="active">{{ "header.deals" | translate }}</a>
-          </li>
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link" routerLink="/deals" routerLinkActive="active">{{ "header.deals" | translate }}</a>-->
+<!--          </li>-->
 <!--          <li class="nav-item">-->
 <!--            <a class="nav-link" routerLink="/approach" routerLinkActive="active">{{ "header.approach" | translate }}</a>-->
 <!--          </li>-->
