--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
             <div class="detail-box">
               <h5>{{ "home.takeaway" | translate }}</h5>
               <h6><span></span></h6>
-              <a>{{ "home.book" | translate }}</a>
+              <a routerLink="/menu">{{ "home.book" | translate }}</a>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
             <div class="detail-box">
               <h5>{{ "home.delivery" | translate }}</h5>
               <h6><span></span></h6>
-              <a>{{ "home.order" | translate }}</a>
+              <a routerLink="/menu">{{ "home.order" | translate }}</a>
             </div>
           </div>
         </div>
@@ -47,9 +47,9 @@
             <h2>{{ "home.about-title" | translate }}</h2>
           </div>
           <p>{{ "home.about-message" | translate }}</p>
-          <a routerLink="/about">
-            {{ "home.about-read-more" | translate }}
-          </a>
+<!--          <a routerLink="/about">-->
+<!--            {{ "home.about-read-more" | translate }}-->
+<!--          </a>-->
         </div>
       </div>
     </div>
