--- a/src/themes.scss
+++ b/src/themes.scss
@@ -56,7 +56,7 @@ nb-layout-column {
   padding: 0 !important;
 }
 
-nb-card {
+nb-card#\#menu-nb-card {
   margin: 0 !important;
   min-height: 100vh;
 }
