add environment variables _ some minor changes

--- a/src/app/pages/Shared/success/success.component.html
+++ b/src/app/pages/Shared/success/success.component.html
@@ -9,7 +9,7 @@
 
     <ul class="filters_menu">
       <li><a [routerLink]="['/contact']" class="nav-link">Notre carte</a></li>
-      <li><a [routerLink]="['/contact']" class="nav-link">Vos commandes</a></li>
+      <!-- <li><a [routerLink]="['/contact']" class="nav-link">Vos commandes</a></li> -->
       <li><a [routerLink]="['/contact']" class="nav-link">Nous contacter</a></li>
     </ul>
   </div>
